# classics-agent

./: README.md  accuracy_test.py  archive_text.txt  batch_analysis_results.json  batch_compare.py  epub_reader.py  pyproject.toml
data/: Harvard Classics Volume 0 - Variant.epub  Harvard Classics Volume 1 - Variant.epub  Harvard Classics Volume 10 - Variant.epub  Harvard Classics Volume 11 - Variant.epub  Harvard Classics Volume 12.epub  Harvard Classics Volume 13 - Variant.epub  Harvard Classics Volume 14 - Variant.epub  Harvard Classics Volume 14.epub  Harvard Classics Volume 16.epub  Harvard Classics Volume 18 - Variant.epub  Harvard Classics Volume 19 - Variant.epub  Harvard Classics Volume 2 - Variant.epub  Harvard Classics Volume 21 - Variant.epub  Harvard Classics Volume 22 - Variant.epub  Harvard Classics Volume 22.epub  Harvard Classics Volume 23 - Variant.epub  Harvard Classics Volume 23.epub  Harvard Classics Volume 24 - Variant.epub  Harvard Classics Volume 26 - Variant.epub  Harvard Classics Volume 29 - Variant.epub  Harvard Classics Volume 3 - Variant.epub  Harvard Classics Volume 3.epub  Harvard Classics Volume 31 - Variant.epub  Harvard Classics Volume 33 - Variant.epub  Harvard Classics Volume 35.epub  Harvard Classics Volume 37 - Variant.epub  Harvard Classics Volume 38 - Variant.epub  Harvard Classics Volume 39 - Variant.epub  Harvard Classics Volume 4 - Variant.epub  Harvard Classics Volume 40 - Variant.epub  Harvard Classics Volume 41.epub  Harvard Classics Volume 43 - Variant.epub  Harvard Classics Volume 44 - Variant.epub  (+7 more)
(+135 files in other folders)
